--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@via-profit/ui-kit",
-  "version": "0.1.1",
+  "version": "0.1.0-rc.6",
   "description": "UI Kit",
-  "main": "dist/index.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git@github.com:via-profit/ui-kit.git"
@@ -13,8 +13,12 @@
   "author": "Via Profit",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "lint": "eslint --fix ."
+    "lint": "eslint --fix .",
+    "build": "node ./scripts/build.js",
+    "publish:package": "bash ./scripts/pub.sh"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "peerDependencies": {
     "@emotion/react": "^11.10.6",
@@ -51,7 +55,6 @@
     "@types/react-modal": "^3.16.0",
     "@types/react-relay": "^14.1.4",
     "@types/react-slick": "^0.23.10",
-    "@types/react-syntax-highlighter": "^15.5.7",
     "@types/react-window": "^1.8.5",
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "@types/webpack-env": "^1.18.1",
@@ -101,9 +104,5 @@
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
-  },
-  "dependencies": {
-    "markdown-to-jsx": "^7.2.0",
-    "react-syntax-highlighter": "^15.5.0"
   }
 }
