--- a/packages/ui-kit-website/package.json
+++ b/packages/ui-kit-website/package.json
@@ -20,8 +20,7 @@
     "@emotion/styled": "^11.10.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-popper": "^2.3.0",
-    "react-window": "^1.8.8"
+    "react-popper": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.15",
@@ -91,7 +90,6 @@
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.16.0",
     "react-test-renderer": "^18.2.0",
-    "react-window": "^1.8.9",
     "shebang-loader": "^0.0.1",
     "terser-webpack-plugin": "^5.3.9",
     "ts-node": "^10.9.1",
