--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -25,8 +25,7 @@
     "@emotion/styled": "^11.10.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-popper": "^2.3.0",
-    "react-window": "^1.8.8"
+    "react-popper": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.15",
@@ -53,7 +52,6 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-relay": "^14.1.5",
     "@types/react-slick": "^0.23.10",
-    "@types/react-window": "^1.8.5",
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "@types/webpack-env": "^1.18.1",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
@@ -90,7 +88,6 @@
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.16.0",
     "react-test-renderer": "^18.2.0",
-    "react-window": "^1.8.9",
     "shebang-loader": "^0.0.1",
     "terser-webpack-plugin": "^5.3.9",
     "ts-node": "^10.9.1",
