--- a/packages/ui-kit-website/package.json
+++ b/packages/ui-kit-website/package.json
@@ -19,84 +19,80 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-popper": "^2.3.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.15",
-    "@babel/core": "^7.22.20",
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.2",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.22.15",
+    "@babel/plugin-transform-runtime": "^7.23.2",
     "@babel/plugin-transform-typescript": "^7.22.15",
-    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
-    "@babel/preset-typescript": "^7.22.15",
-    "@babel/runtime": "^7.22.15",
+    "@babel/preset-typescript": "^7.23.2",
+    "@babel/runtime": "^7.23.2",
     "@emotion/babel-plugin": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@loadable/babel-plugin": "^5.16.1",
     "@loadable/webpack-plugin": "^5.15.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-    "@types/js-cookie": "^3.0.4",
-    "@types/loadable__component": "^5.13.5",
-    "@types/loadable__server": "^5.12.7",
-    "@types/loadable__webpack-plugin": "^5.7.4",
-    "@types/mustache": "^4.2.2",
-    "@types/node": "^20.6.4",
-    "@types/nodemon": "^1.19.3",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-relay": "^14.1.5",
-    "@types/react-slick": "^0.23.10",
-    "@types/react-syntax-highlighter": "^15.5.7",
-    "@types/react-window": "^1.8.5",
-    "@types/webpack-bundle-analyzer": "^4.6.0",
-    "@types/webpack-env": "^1.18.1",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
+    "@types/js-cookie": "^3.0.5",
+    "@types/loadable__component": "^5.13.6",
+    "@types/loadable__server": "^5.12.8",
+    "@types/loadable__webpack-plugin": "^5.7.5",
+    "@types/mustache": "^4.2.4",
+    "@types/node": "^20.8.10",
+    "@types/nodemon": "^1.19.4",
+    "@types/react": "^18.2.34",
+    "@types/react-dom": "^18.2.14",
+    "@types/react-slick": "^0.23.11",
+    "@types/react-syntax-highlighter": "^15.5.9",
+    "@types/react-window": "^1.8.7",
+    "@types/webpack-bundle-analyzer": "^4.6.2",
+    "@types/webpack-env": "^1.18.3",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
     "babel-loader": "^9.1.3",
-    "concurrently": "^8.2.1",
+    "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
-    "eslint": "^8.50.0",
+    "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-node": "^0.3.9",
-    "eslint-import-resolver-webpack": "^0.13.7",
+    "eslint-import-resolver-webpack": "^0.13.8",
     "eslint-plugin-file-progress": "^1.3.0",
-    "eslint-plugin-formatjs": "^4.10.5",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-formatjs": "^4.11.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-relay": "^1.8.3",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "nodemon": "^3.0.1",
-    "nodemon-webpack-plugin": "^4.8.1",
+    "nodemon-webpack-plugin": "^4.8.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-popper": "^2.3.0",
     "react-refresh": "^0.14.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.18.0",
     "react-test-renderer": "^18.2.0",
     "shebang-loader": "^0.0.1",
     "terser-webpack-plugin": "^5.3.9",
     "ts-node": "^10.9.1",
-    "type-fest": "^4.3.1",
+    "type-fest": "^4.6.0",
     "typescript": "^5.2.2",
     "url-loader": "^4.1.1",
-    "webpack": "^5.88.2",
+    "webpack": "^5.89.0",
     "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
@@ -104,11 +100,11 @@
   "dependencies": {
     "@loadable/component": "^5.15.3",
     "@loadable/server": "^5.16.1",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@reduxjs/toolkit": "^1.9.7",
     "js-cookie": "^3.0.5",
     "markdown-to-jsx": "^7.3.2",
     "mustache": "^4.2.0",
-    "react-redux": "^8.1.2",
+    "react-redux": "^8.1.3",
     "react-syntax-highlighter": "^15.5.0",
     "reselect": "^4.1.8"
   }
