--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run start --workspace packages/ui-kit-website",
-    "build": "npm run build --workspace packages/ui-kit"
+    "build": "npm run build --workspace packages/ui-kit",
+    "i18n": "npm run i18n --workspace packages/ui-kit-website"
   },
   "author": "",
   "license": "MIT",
