--- a/packages/ui-kit-website/package.json
+++ b/packages/ui-kit-website/package.json
@@ -13,7 +13,12 @@
   "license": "MIT",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --config ./webpack/webpack-config-client.ts",
-    "lint": "eslint --fix ."
+    "lint": "eslint --fix .",
+    "i18n:extract": "npm run i18n:extract:ru && npm run i18n:extract:en",
+    "i18n:compile": "formatjs compile-folder ./src/lang ./src/translations",
+    "i18n:extract:ru": "formatjs extract 'src/components/**/**/*.{ts,tsx}' 'src/utils/**/**/*.ts' 'src/pages/**/**/*.{ts,tsx}' 'src/providers/**/*.{ts,tsx}' 'src/examples/**/*.{ts,tsx}' --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file ./src/lang/ru-RU.json",
+    "i18n:extract:en": "jq -s '.[0] * .[1]' ./src/lang/ru-RU.json ./src/lang/en-US.json > ./src/lang/tmp.json && mv ./src/lang/tmp.json ./src/lang/en-US.json",
+    "i18n": "npm run i18n:extract && npm run i18n:compile"
   },
   "peerDependencies": {
     "@emotion/react": "^11.10.6",
@@ -37,6 +42,7 @@
     "@emotion/babel-plugin": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@formatjs/cli": "^6.2.2",
     "@loadable/babel-plugin": "^5.16.1",
     "@loadable/webpack-plugin": "^5.15.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
@@ -57,6 +63,7 @@
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "babel-loader": "^9.1.3",
+    "babel-plugin-formatjs": "^10.5.8",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
@@ -104,6 +111,7 @@
     "js-cookie": "^3.0.5",
     "markdown-to-jsx": "^7.3.2",
     "mustache": "^4.2.0",
+    "react-intl": "^6.5.2",
     "react-redux": "^8.1.3",
     "react-syntax-highlighter": "^15.5.0",
     "reselect": "^4.1.8"
