--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -15,7 +15,8 @@
     "lint": "eslint --fix .",
     "build": "node ./scripts/build.js",
     "publish:package": "bash ./scripts/pub.sh",
-    "build:flags": "node ./scripts/compile-country-flags.js"
+    "build:flags": "node ./scripts/compile-country-flags.js",
+    "indexes:flags": "node ./scripts/indexes-country-flags.js"
   },
   "publishConfig": {
     "access": "public"
