--- a/.vscode/launch.example.json
+++ b/.vscode/launch.example.json
@@ -8,9 +8,9 @@
       "port": 9227,
       "webRoot": "${workspaceFolder}",
       "sourceMaps": true,
-      "url": "http://localhost:8087",
+      "url": "http://localhost:8080",
       "sourceMapPathOverrides": {
-        "webpack://@via-profit/ui-kit-website/*": "${webRoot}/packages/ui-kit-website/*",
+        "webpack://@via-profit/ui-kit-website/*": "${webRoot}/packages/ui-kit-website/*"
       }
     }
   ]
