--- a/package.json
+++ b/package.json
@@ -17,6 +17,23 @@
   ],
   "devDependencies": {
     "concurrently": "^8.2.1",
-    "fs-extra": "^11.1.1"
+    "fs-extra": "^11.1.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-import-resolver-webpack": "^0.13.8",
+    "eslint-plugin-file-progress": "^1.3.0",
+    "eslint-plugin-formatjs": "^4.11.3",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "prettier": "^3.1.1"
   }
 }
