--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@via-profit/ui-kit",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "description": "UI Kit",
   "repository": {
     "type": "git",
@@ -22,10 +22,10 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@emotion/react": ">=11.10.6",
+    "@emotion/styled": ">=11.10.6",
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
